updated services and toggle theme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div
-  class="top-container bg-light-display-bg-theme h-screen overflow-y-hidden rounded-2xl flex flex-col"
+  class="top-container h-screen overflow-y-hidden rounded-2xl flex flex-col bg-gradient-to-br from-[#FEFEFE] via-[#F9F9F9] to-[#E5E5E5] bg-gradient-to-br dark:from-[#373737] dark:via-[#252628] dark:to-[#000309] lg:flex lg:justify-center lg:items-center "
 >
   <app-navbar class="h-16 flex flex-col pt-[3rem] justify-center"></app-navbar>
   <div class="calculator flex-1">
