--- a/src/app/components/calculator/calculator.component.html
+++ b/src/app/components/calculator/calculator.component.html
@@ -1,8 +1,8 @@
-<div class="container flex flex-col h-full ">
+<div class="container flex flex-col h-full  ">
   <div class="display flex-1 ">
     <app-display></app-display>
   </div>
-  <div class="keypad flex-1 ">
+  <div class="keypad flex-1 bg-light-keypad-theme shadow-light-keypad-shadow dark:bg-dark-keypad-theme dark:shadow-dark-keypad-shadow">
     <app-keypad></app-keypad>
   </div>
 </div>
