--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
   <div class="toggle-center">
     <app-toggle-theme></app-toggle-theme>
   </div>
-  <div class="history">
+  <div class="history" (click)="onClick()">
     <img src="/assets/images/history.svg" alt="" height="30" width="30">
   </div>
 </div>
