--- a/src/app/components/calculator/keypad/key/key.component.html
+++ b/src/app/components/calculator/keypad/key/key.component.html
@@ -1,3 +1,4 @@
-<div class="key w-[70px] h-[70px] rounded-full flex justify-center items-center bg-[#ffffff4d]">
-  <button class="text-[26px] text-[#373737]">{{key}}</button>
+<!-- key.component.html -->
+<div class="key w-[70px] h-[70px] lg:w-[40px] lg:h-[40px] rounded-full flex justify-center items-center bg-[#ffffff4d] dark:bg-[#0505054D]">
+  <button class="text-[26px] lg:text-[20px] text-[#373737] dark:text-white" >{{ key }}</button>
 </div>
