--- a/src/app/components/calculator/calculator.component.html
+++ b/src/app/components/calculator/calculator.component.html
@@ -1,4 +1,4 @@
-<div class="container flex flex-col h-full  ">
+<div class="container flex flex-col h-full lg:w-[350px]  lg:h-[500px] ">
   <div class="display flex-1 ">
     <app-display></app-display>
   </div>
