--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,6 +4,6 @@
     <app-toggle-theme></app-toggle-theme>
   </div>
   <div class="history" (click)="onClick()">
-    <img src="/assets/images/history.svg" alt="" height="30" width="30">
+    <img ngSrc="/assets/images/history.svg" alt="" height="30" width="30">
   </div>
 </div>
