calculator operations bug fix

--- a/src/app/components/calculator/keypad/keypad.component.html
+++ b/src/app/components/calculator/keypad/keypad.component.html
@@ -31,7 +31,7 @@
     <div class="col-span-1">
       <!-- Operator Buttons -->
       <div class="grid grid-rows-4 gap-4">
-        <app-key [key]="'%'" (click)="addToOperation('%')"></app-key>
+        <app-key [key]="'%'" (click)="addToOperation('/')"></app-key>
         <app-key [key]="'x'" (click)="addToOperation('*')"></app-key>
         <app-key [key]="'-'" (click)="addToOperation('-')"></app-key>
         <app-key [key]="'+'" (click)="addToOperation('+')"></app-key>
