--- a/src/app/components/calculator/keypad/key/key.component.html
+++ b/src/app/components/calculator/keypad/key/key.component.html
@@ -1,4 +1,4 @@
 <!-- key.component.html -->
-<div class="key w-[70px] h-[70px] lg:w-[40px] lg:h-[40px] rounded-full flex justify-center items-center bg-[#ffffff4d] dark:bg-[#0505054D]">
+<div class="key w-[70px] h-[70px] lg:w-[40px] lg:h-[40px] rounded-full flex justify-center items-center bg-[#ffffff4d] dark:bg-[#0505054D] cursor-pointer">
   <button class="text-[26px] lg:text-[20px] text-[#373737] dark:text-white" >{{ key }}</button>
 </div>
