--- a/src/app/components/calculator/keypad/keypad.component.html
+++ b/src/app/components/calculator/keypad/keypad.component.html
@@ -4,9 +4,9 @@
     <div class="col-span-3 gap-4">
       <div class="grid grid-cols-1 mb-4">
         <div class=" rounded-full flex justify-between items-center bg-[#ffffff4d] dark:bg-[#0505054D]  h-[70px] lg:h-[40px] px-2 ">
-          <div class="text-[26px] text-[#373737] lg:text-[20px] dark:text-white" (click)="clearResult()">AC</div>
-          <div class="text-[26px] text-[#373737] lg:text-[20px] dark:text-white" (click)="negateLastNumber()">+/-</div>
-          <div class="text-[26px] text-[#373737] lg:text-[20px] dark:text-white" (click)="addToOperation('%')">%</div>
+          <div class="text-[26px] text-[#373737] lg:text-[20px] dark:text-white cursor-pointer" (click)="clearResult()">AC</div>
+          <div class="text-[26px] text-[#373737] lg:text-[20px] dark:text-white cursor-pointer" (click)="negateLastNumber()">+/-</div>
+          <div class="text-[26px] text-[#373737] lg:text-[20px] dark:text-white cursor-pointer"  (click)="addToOperation('%')">%</div>
         </div>
       </div>
       <!-- Key Buttons -->
